--- a/oot_adapters/myootlogger/operatorconfig/sample_operator_cfg.yaml
+++ b/oot_adapters/myootlogger/operatorconfig/sample_operator_cfg.yaml
@@ -23,42 +23,14 @@ spec:
    severity: '"Default"'
    timestamp: request.time
    variables:
-	sourceIp: source.ip | ip("0.0.0.0")
-    sourceApp: source.labels["app"] | ""
-    sourcePrincipal: source.principal | ""
-    sourceName: source.name | ""
-    sourceWorkload: source.workload.name | ""
     sourceNamespace: source.namespace | ""
-    sourceOwner: source.owner | ""
-    destinationApp: destination.labels["app"] | ""
-    destinationIp: destination.ip | ip("0.0.0.0")
     destinationServiceHost: destination.service.host | ""
-    destinationWorkload: destination.workload.name | ""
-    destinationName: destination.name | ""
-    destinationNamespace: destination.namespace | ""
-    destinationOwner: destination.owner | ""
-    destinationPrincipal: destination.principal | ""
-    apiClaims: request.auth.raw_claims | ""
-    apiKey: request.api_key | request.headers["x-api-key"] | ""
     protocol: request.scheme | context.protocol | "http"
     method: request.method | ""
     url: request.path | ""
     responseCode: response.code | 0
-    responseSize: response.size | 0
-    requestSize: request.size | 0
-    requestId: request.headers["x-request-id"] | ""
-    clientTraceId: request.headers["x-client-trace-id"] | ""
     latency: response.duration | "0ms"
-    connection_security_policy: conditional((context.reporter.kind | "inbound") == "outbound", "unknown", conditional(connection.mtls | false, "mutual_tls", "none"))
-    requestedServerName: connection.requested_server_name | ""
-    userAgent: request.useragent | ""
-    responseTimestamp: response.time
-    receivedBytes: request.total_size | 0
-    sentBytes: response.total_size | 0
-    referer: request.referer | ""
     httpAuthority: request.headers[":authority"] | request.host | ""
-    xForwardedFor: request.headers["x-forwarded-for"] | "0.0.0.0"
-    reporter: conditional((context.reporter.kind | "inbound") == "outbound", "source", "destination")
     sourceUser: source.user | ""
     destinationService: destination.service | "service unknown"
     destinationUid: destination.uid | "dest uid unknown"
@@ -71,7 +43,9 @@ metadata:
   name: r1 
   namespace: istio-system
 spec:
-  match: "true" # match for all requests
+  #match: destination.service == "product*" || destination.service == ratings* | destination.service == reviews* | destination.service == details* # match for all requests
+  match: destination.service.startsWith("product") || destination.service.startsWith("ratings") || destination.service.startsWith("reviews") || destination.service.startsWith("details") 
+  #match: method == "GET" # match for all requests
   actions:
    - handler: h1
      instances:
